--- a/index.html
+++ b/index.html
@@ -1,142 +1,144 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
+  <title>The Crypto Horse Race</title>
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <style>
 
 
-* {
-  box-sizing: border-box;
-}
-
-/* Style the body */
-body {
-  font-family: Lucida Console, Helvetica, monospace;
-  margin: 0;
-}
-
-/* Header/logo Title */
-.header {
-  padding: 20px;
-  text-align: center;
-  background: black;
-  color: white;
-}
-
-/* Increase the font size of the heading */
-.header h1 {
-  font-size: 40px;
-}
-
-/* Style the top navigation bar */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-/* Right-aligned link */
-.navbar a.right {
-  float: left;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Column container */
-.row {  
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-}
-
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  -ms-flex: 30%; /* IE10 */
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
-.main {   
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row {   
-    flex-direction: column;
+  * {
+    box-sizing: border-box;
   }
-}
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
+  /* Style the body */
+  body {
+    font-family: Lucida Console, Helvetica, monospace;
+    margin: 0;
+  }
+
+  /* Header/logo Title */
+  .header {
+    padding: 20px;
+    text-align: center;
+    background: black;
+    color: white;
+  }
+
+  /* Increase the font size of the heading */
+  .header h1 {
+    font-size: 40px;
+  }
+
+  /* Style the top navigation bar */
+  .navbar {
+    overflow: hidden;
+    background-color: #333;
+  }
+
+  /* Style the navigation bar links */
   .navbar a {
-    float: none;
-    width: 100%;
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
   }
-}
+
+  /* Right-aligned link */
+  .navbar a.right {
+    float: left;
+  }
+
+  /* Change color on hover */
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  /* Column container */
+  .row {  
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+  }
+
+  /* Create two unequal columns that sits next to each other */
+  /* Sidebar/left column */
+  .side {
+    -ms-flex: 30%; /* IE10 */
+    flex: 30%;
+    background-color: #f1f1f1;
+    padding: 20px;
+  }
+
+  /* Main column */
+  .main {   
+    -ms-flex: 70%; /* IE10 */
+    flex: 70%;
+    background-color: white;
+    padding: 20px;
+  }
+
+  /* Fake image, just for this example */
+  .fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+  }
+
+  /* Footer */
+  .footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+  }
+
+  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 700px) {
+    .row {   
+      flex-direction: column;
+    }
+  }
+
+  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+  @media screen and (max-width: 400px) {
+    .navbar a {
+      float: none;
+      width: 100%;
+    }
+  }
 
 
-.enableEthereumButton {
-  border: none;
-  background-color: blueviolet;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
+  .enableEthereumButton {
+    border: none;
+    background-color: blueviolet;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
 
-.sendEthButton {
-  border: none;
-  background-color: blueviolet;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-</style>
+  .sendEthButton {
+    border: none;
+    background-color: blueviolet;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  </style>
 </head>
 
 <body>
@@ -195,7 +197,7 @@ body {
 
           <br></br>
           
-          <input type="checkbox" id="Bitcoin1" name="Ethereum1" value="Bitcoin">
+          <input type="checkbox" id="Bitcoin2" name="Ethereum1" value="Bitcoin">
           <label for="vehicle4"> Dogecoin <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpVO7l_mz0PqYeC0T_Anw3bKvHz8Oi91sZ7N_WwOzO0aVuJaa5gwv_8tHvUHPYnIyB53c&usqp=CAU" alt="Dogecoin" width="70" height="70"/></label> Odds: Z% <br>
 
           <br></br>
